--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+a{
+display:inline-block;
+border:1px solid #73AD21;
+background-color:#73AD21;
+padding:10px 12px;
+box-shadow:2px 2px 5px #6c6969;
+text-decoration:none;
+border-radius:3px;
+color:white;
+}
+
+a:hover{
+border:1px solid #90d331;
+background-color:#90d331;
+}
+
+a:active{
+border:1px solid #669f15;
+background-color:#669f15;
+}
+
 body {
 font-family: Inter;
 }
@@ -23,7 +44,7 @@ transition:all ease .3s
 .profile-card:hover {
 border-radius:15px;
 height:500px;
-background-color:#f90;
+background-color:#000080;
 padding:10px 0 0
 }
 
