--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+a:hover {
+color: #FFCC00
+}
+
 body {
 font-family: Inter;
 }
+
 .profile-card header img {
 border-radius:50%;
 margin:15px auto;
