fix album cover showing when not playing

--- a/styles.css
+++ b/styles.css
@@ -540,6 +540,10 @@ h5.animate-on-load {
     color: #ccc;
 }
 
+#album-cover {
+    display: none;
+}
+
 .button-container {
     display: flex;
     justify-content: center;
